# universal

./: .actrc  .cspell.config.mjs  .czrc  .editorconfig  .env  .env.demo  .env.development  .env.production  .env.universal  .eslintignore  .gitattributes  .gitignore  .jscpd.json  .kics.config.json  .latexmkrc  .megalinter.yml  .npmrc  .pre-commit-config.yaml  .prettierignore  .shellcheckrc  .talismanrc  .tool-versions  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  Taskfile.yml  package.json  pnpm-lock.yaml  pyproject.toml  universal.base.yml  universal.code-workspace  universal.demo.yml  universal.development.yml  universal.production.yml
services/api/: .dockerignore  .tool-versions  Dockerfile  Dockerfile.old  README.md  Taskfile.yml  api.code-workspace  entrypoint.sh  poetry.toml  pyproject.toml
services/api/api/: __main__.py  main.py
services/api/api/alembic/: env.py
services/api/api/alembic/versions/: 0001_create_messages_table.py
services/api/api/api/: endpoints.py
services/api/api/auth/: oidc_user.py
services/api/api/core/: config.py  settings.py
services/api/api/database/: dao.py  database.py
services/api/api/models/: map_state.py  message.py  user.py
services/api/migrations/versions/: 0002_create_map_table.py  0003_add_description_to_map_state_table.py
services/api/src/app/: main.py
services/api/src/app/api/: api.py  app.py  middleware.py
services/api/src/app/auth/: check_roles.py  keycloak.py  oidc_user.py
services/api/src/app/core/: exceptions.py  lifecycle.py  settings.py
services/api/src/app/extensions/: __init__.py  body_size_middleware.py  correlation_id_middleware.py  csp_middleware.py  logging_middleware.py  powered_by_middleware.py  process_time_middleware.py  rate_limiting_middleware.py
services/api/src/app/schemas/: map_state.py  message.py  user.py
services/api/src/app/security/: csp.py
services/api/src/app/services/: health_service.py  map_state_service.py  (+2 more)
services/api/tasks/: test.yml
services/api/tests/: conftest.py  test_api.py
services/api/tests/api/: test_auth.py  test_map_api.py  test_map_states_api.py  test_messages_api.py  test_middleware.py
services/api/tests/core/: test_settings.py
services/api/tests/db/: test_health_repository.py  test_map_dao.py  test_map_repository.py  test_map_states_dao.py  test_map_states_repository.py  test_messages_dao.py
services/api/tests/services/: test_map_service.py  test_map_states_service.py  test_messages_service.py
services/api/typings/fastapi_keycloak_middleware/: __init__.pyi  exceptions.pyi  fast_api_user.pyi  keycloak_backend.pyi  middleware.pyi  setup.pyi
(+438 files in other folders)
