[tool.poetry]
name = "universal-devtools"
version = "0.1.0"
description = "Python development tools for the universal monorepo."
authors = ["Universal <dev@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
flake8 = "^7.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.5"]
build-backend = "poetry.core.masonry.api"
